--- a/jc/MuSu_(NA, c, NA).rmd
+++ b/jc/MuSu_(NA, c, NA).rmd
@@ -111,7 +111,7 @@ load(paste0("../data/grandatble_and_labels_MSC01_MSC08_20190312.Rdata")) # read 
 
 ## Categorize columns by between or within edges
 #--- Create new column of sub-edgetype
-labels[,'subjects_wb'] <- sprintf('%s_%s',labels$subjects_label,labels$wb)
+gtlabel[,'subjects_wb'] <- sprintf('%s_%s',gtlabel$subjects_label,gtlabel$wb)
 
 ```
 
@@ -126,7 +126,7 @@ labels[,'subjects_wb'] <- sprintf('%s_%s',labels$subjects_label,labels$wb)
 # Centered across sessions
 gt_preproc <- expo.scale(gt, center = TRUE, scale = FALSE)
 # set the column names
-colnames(gt_preproc) <- labels$subjects_edge_label
+colnames(gt_preproc) <- gtlabel$subjects_edge_label
 # check dimension
 dim(t(gt_preproc))
 ```
@@ -134,7 +134,7 @@ dim(t(gt_preproc))
 Then, the preprocessed data are decomposed by the SVD:
 
 ```{r svd}
-svd.res <- epPCA(t(gt_preproc),scale = FALSE, center = FALSE, DESIGN = labels$subjects_edge_label, make_design_nominal = TRUE, graphs = FALSE)
+svd.res <- epPCA(t(gt_preproc),scale = FALSE, center = FALSE, DESIGN = gtlabel$subjects_edge_label, make_design_nominal = TRUE, graphs = FALSE)
 
 ```
 
@@ -148,7 +148,45 @@ PlotScree(ev = svd.res$ExPosition.Data$t,
 
 ```
 
-```{r}
+Before checking the factor scores, we first plot the contribution to check the importance of each edge
+
+```{r contribution}
+#--- get the contribution of each component
+cI <- svd.res$ExPosition.Data$ci
+#--- get the sum of contribution for each edge
+c_edge <- gtlabel$subjects_edge_label %>% as.matrix %>% makeNominalData %>% t %>% "%*%"(cI)
+rownames(c_edge) <- sub(".","",rownames(c_edge))
+#--- compute the sums of squares of each variable for each component
+absCtrEdg <- as.matrix(c_edge) %*% diag(svd.res$ExPosition.Data$eigs)
+#--- get the contribution for component 1 AND 2 by sum(SS from 1, SS from 2)/sum(eigs 1, eigs 2)
+edgCtr12 <- (absCtrEdg[,1] + absCtrEdg[,2])/(svd.res$ExPosition.Data$eigs[1] + svd.res$ExPosition.Data$eigs[2])
+#--- the important variables are the ones that contribute more than or equal to the average
+importantEdg <- (edgCtr12 >= 1/length(edgCtr12))
+#--- color for networks
+col4ImportantEdg <- unique(svd.res$Plotting.Data$fi.col) # get colors
+col4NS <- 'gray90' # set color for not significant edges to gray
+col4ImportantEdg[!importantEdg] <- col4NS # replace them in the color vector
 
 ```
 
+```{r plot_ci}
+ciplot_all <- createFactorMap(c_edge,
+                          axis1 = 1, axis2 = 2,
+                          col.points = col4ImportantEdg,
+                          text.cex = 2,
+                          force = 0.5,
+                          title = "Contibutions for all subject x edges")
+ciplot_imp <- createFactorMap(c_edge[importantEdg,],
+                          axis1 = 1, axis2 = 2,
+                          col.points = col4ImportantEdg[importantEdg],
+                          text.cex = 2,
+                          force = 0.5,
+                          title = "Significant contribution")
+ciplot01 <- ciplot_all$zeMap_background + ciplot_all$zeMap_dots
+ciplot02 <- ciplot_imp$zeMap_background + ciplot_imp$zeMap_dots + ciplot_imp$zeMap_text
+```
+
+```{r grid_ciplot, echo=F, fig.height=6, fig.width=12}
+gridExtra::grid.arrange(as.grob(ciplot01), as.grob(ciplot02), ncol=2,
+                        top = textGrob("Contribution plots",gp=gpar(fontsize=18,font=3)))
+```
